fixed example, added READMEs

--- a/browser-example/index.html
+++ b/browser-example/index.html
@@ -11,7 +11,7 @@
 			 packages: {
 		        wire: { path: 'components/wire', main: 'wire'},
 		        when: { path: 'components/when/', main: 'when'},
-		        yaap: { path: '../yaap/', main: 'yaap'},
+		        yaap: { path: 'components/yaap/yaap', main: 'yaap'},
 		        meld: { path: 'components/meld', main: 'meld' },
 		        underscore:{ path: 'components/underscore', main: 'underscore',
 		        		config: {moduleLoader: 'curl/loader/cjsm11'}
