--- a/browser-example/index.html
+++ b/browser-example/index.html
@@ -11,7 +11,7 @@
 			 packages: {
 		        wire: { path: 'components/wire', main: 'wire'},
 		        when: { path: 'components/when/', main: 'when'},
-		        yaap: { path: 'components/yaap/yaap', main: 'yaap'},
+		        yaap: { path: '../yaap', main: 'yaap'},
 		        meld: { path: 'components/meld', main: 'meld' },
 		        underscore:{ path: 'components/underscore', main: 'underscore',
 		        		config: {moduleLoader: 'curl/loader/cjsm11'}
@@ -24,15 +24,17 @@
 </script>
 </head>
 <body>
-
-<script src="components/curl/src/curl.js"></script>
+<input class="pressed" type="button" id="myButton" value="Button1" />
+<input class="pressed" type="button" id="myButton" value="Button2" />
+<textarea style="display:block;width:200px;height:200px" id="output"></textarea>
+<script src="./components/curl/src/curl.js"></script>
 <script type="text/javascript">
 
 curl(['wire!spec']).then(function(ctx){
 
 	console.log("----- initialized -----");
 	ctx.myComponent.doSomething();
-  	ctx.myComponent.doSomethingElseAgain();
+  	
   	
 },function(err){
 	console.log("err: " + err);
